src/test/deca/syntax/invalid/synt/log/comment.loglex
IDENT: [@0,18:35='jesuisunidentifier',<43>,1:18]
'*': [@1,36:36='*',<27>,1:36]
'/': [@2,37:37='/',<26>,1:37]
